Various changes to make the task-based indexer work better Tray icon flashes when indexing Context menu item to exit

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="database_monitoring" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons\database_monitoring.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="database_working_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\database_working_1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="database_working_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\database_working_2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
