--- a/wiki/GithubSource.wiki
+++ b/wiki/GithubSource.wiki
@@ -1,3 +1,3 @@
-Source code moved to [http://github.com]GitHub.
+Source code moved to [http://github.com GitHub].
 
 https://github.com/kevingadd/NDexer
